codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__forked_thread_history_line_without_name.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Thread forked from 019c2d47-4935-7423-a190-05691f566092
