codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__full_access_justification_prompt.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
▌ Why do you need full access?
▌ Your admin requires a justification before enabling full access.
▌
▌ Type a justification and press Enter

Press enter to confirm or esc to go back
