codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__goal_menu_managed_file.snap
---
source: tui/src/chatwidget/tests/goal_menu.rs
expression: rendered
---
Goal
Status: active
Objective file: $CODEX_HOME/attachments/<uuid>/goal-objective.md
Time used: 1m
Tokens used: 12.5K
Token budget: 80K

Commands: /goal edit, /goal pause, /goal clear
